[package]
name = "website"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "html_template/html_template_core",
    "html_template/html_template_macros",
    "html_template/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
actix-files = { version = "0.6" }
# https://docs.rs/markdown/1.0.0-alpha.7/markdown/index.html
markdown = { version = "1.0.0-alpha.7" }
serde = { version = "1.0", features = ["derive"]}
html_template_core = { path = "./html_template/html_template_core" }
html_template_macros = { path = "./html_template/html_template_macros" }
