[package]
name = "website"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "html_template/html_template_core",
    "html_template/html_template_macros",
    "html_template/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"]}
actix-files = { version = "0.6" }
mime = { version = "0.3" }
# https://docs.rs/markdown/1.0.0-alpha.7/markdown/index.html
markdown = { version = "1.0.0-alpha.7" }
serde = { version = "1.0", features = ["derive"]}
html_template_core = { path = "./html_template/html_template_core" }
html_template_macros = { path = "./html_template/html_template_macros" }
time = { version = "0.3", features = ["formatting"]}
tokio = { version = "1.26.0", features = ["fs"] }
openssl = { version = "0.10", features = ["v110"] }
futures = { version = "0.3" }
log = { version = "0.4" }
env_logger = { version = "0.10" }
lazy_static = { version = "1.4" }
